# genres

./: .gitignore  Cargo.toml  README.md  adjust.sh  cleanup.sh  config.toml  remove.sh
.cargo/: config.toml
best/: model.mpk
best/checkpoint/: model-305.mpk  model-315.mpk  optim-305.mpk  optim-315.mpk  scheduler-305.mpk  scheduler-315.mpk
mfcc/src/: mfcc.rs
src/: audio.rs  consts.rs  files.rs  genre.rs  lazy_init.rs  main.rs  model.rs  params.rs
src/layers/: noise.rs
