[package]
name = "genres"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
biquad = "0.5.0"
burn = { version = "0.19.1", features = ["train", "autodiff", "dataset", "cuda", "ndarray"] }   
hound = "3.5.1"
mel_spec = "0.3.3"
ndarray = "0.15.6"
num-complex = "0.4.6"
rand = "0.9.2"
rustfft = "6.4.0"
serde = { version = "1.0.219", features = ["derive"] }
signalsmith-stretch = "0.1.3"
symphonia = "0.5.4"
toml = "0.9.5"
